--- a/package.json
+++ b/package.json
@@ -21,12 +21,24 @@
     "@angular/platform-browser": "5.0.0",
     "@angular/platform-browser-dynamic": "5.0.0",
     "@ionic-native/core": "4.3.2",
+    "@ionic-native/device": "^4.4.2",
+    "@ionic-native/fcm": "^4.4.2",
     "@ionic-native/splash-screen": "4.3.2",
     "@ionic-native/status-bar": "4.3.2",
     "@ionic/storage": "2.1.3",
+    "cordova-android": "^6.4.0",
+    "cordova-plugin-device": "^1.1.7",
+    "cordova-plugin-fcm": "^2.1.2",
+    "cordova-plugin-ionic-webview": "^1.1.16",
+    "cordova-plugin-splashscreen": "^4.1.0",
+    "cordova-plugin-whitelist": "^1.3.3",
     "ionic-angular": "3.9.2",
+    "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
+    "jquery": "^3.2.1",
+    "ng2-socket-io": "^0.1.7",
     "rxjs": "5.5.2",
+    "socket.io-client": "^2.0.4",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.18"
   },
@@ -34,5 +46,20 @@
     "@ionic/app-scripts": "3.1.0",
     "typescript": "2.4.2"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "main": "index.js",
+  "license": "ISC",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-device": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-whitelist": {},
+      "ionic-plugin-keyboard": {},
+      "cordova-plugin-fcm": {}
+    },
+    "platforms": [
+      "android"
+    ]
+  }
 }
